--- a/plugins/thehive/Dockerfile
+++ b/plugins/thehive/Dockerfile
@@ -1,7 +1,11 @@
-FROM rapid7/insightconnect-python-3-38-plugin:5
+FROM rapid7/insightconnect-python-3-38-plugin:4
 
 LABEL organization=rapid7
 LABEL sdk=python
+
+ENV SSL_CERT_FILE /etc/ssl/certs/ca-certificates.crt
+ENV SSL_CERT_DIR /etc/ssl/certs
+ENV REQUESTS_CA_BUNDLE  /etc/ssl/certs/ca-certificates.crt
 
 WORKDIR /python/src
 
@@ -15,6 +19,7 @@ ADD . /python/src
 RUN	python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-USER nobody
+# Needed for ssl
+USER root
 
 ENTRYPOINT ["/usr/local/bin/komand_thehive"]
