--- a/plugins/palo_alto_cortex_xdr/plugin.spec.yaml
+++ b/plugins/palo_alto_cortex_xdr/plugin.spec.yaml
@@ -4,8 +4,9 @@ products: [insightconnect]
 name: palo_alto_cortex_xdr
 title: Palo Alto Cortex XDR
 description: Stop modern attacks with the industry's first extended detection and response platform that spans your endpoints, network and cloud data
-version: 2.3.0
-supported_versions: ["2022-03-28 Palo Alto Cortex XDR API v1"]
+version: 3.0.0
+connection_version: 1
+supported_versions: ["2022-08-09 Palo Alto Cortex XDR API v1"]
 vendor: rapid7
 support: rapid7
 status: []
