--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -4,13 +4,17 @@ products: [insightconnect]
 name: zoom
 title: Zoom
 description: Trigger workflows on user activity while also managing your users with the Zoom plugin
-version: 4.1.0
+version: 4.1.1
 vendor: rapid7
 support: rapid7
 status: []
 supported_versions: ["Zoom API v2.10"]
 cloud_ready: true
 tags: [zoom, chat]
+sdk:
+  type: full
+  version: 5
+  user: nobody
 hub_tags:
   use_cases: [alerting_and_notifications, application_management, threat_detection_and_response, user_management]
   keywords: [zoom, chat, cloud_enabled]
@@ -20,10 +24,6 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   vendor_url: https://www.zoom.com/
 enable_cache: false
-sdk:
-  type: full
-  version: 4
-  user: nobody
 
 connection:
   client_id:
@@ -196,7 +196,7 @@ types:
       description: JID of user
       type: string
       required: false
-      example: T9ti3NBxR42swGKrqABGig@xmpp.zoom.us
+      example: user@example.com
     group_ids:
       title: Web Group IDs
       description: IDs of the web groups user belongs to
