--- a/.github/workflows/tier_one_coverage.yml
+++ b/.github/workflows/tier_one_coverage.yml
@@ -10,41 +10,51 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v3
-      with:
-        python-version: '3.9'
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
 
-    - name: Run Coverage on Tier One Plugins
-      env:
-#        TIER_ONE_PLUGINS_ICON: jira
-        TIER_ONE_PLUGINS_ICON: math active_directory_ldap advanced_regex microsoft_atp_safe_links base64 string basename subnet microsoft_teams csv python_3_script type_converter rapid7_insight_agent datetime rapid7_insightidr whois dig rapid7_insightvm rapid7_intsights extractit rapid7_vulndb rapid7_insightappsec hashit rest rapid7_insights html servicenow jira sleep
+      - name: Make Temp Dir for Artifacts
+        run: |
+          pwd
+          mkdir coverageDir 
+          touch coverageDir/coverage.csv
 
-      run: |
-        set +e
-        cd plugins
-        touch coverage.csv
-        for plugin in $TIER_ONE_PLUGINS_ICON
-        do
-          cd $plugin
-          echo $plugin
-          python3 -m venv venv
-          source venv/bin/activate
-          pip3 install setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
-          pip3 install coverage insightconnect_plugin_runtime --no-cache-dir --disable-pip-version-check
-          pip3 install -r requirements.txt --no-cache-dir --disable-pip-version-check
-          export PYTHONPATH=$(pwd)/unit_test/
-          coverage run -m unittest unit_test/*
-          percentage="0%"
-          output=$(python3 -m coverage report --data-file=$data_file)
-          if [ "$output" != "No data to report." ]
-          then
-            echo $output
-            percentage=$(echo $output | grep TOTAL | awk '{print $NF}')
-          fi
-          echo "$plugin, $percentage" >> ../coverage.csv
-          deactivate
-          rm -r venv
-          cd ../
-        done
+      - name: Run Coverage on Tier One Plugins
+        env:
+          TIER_ONE_PLUGINS_ICON: math active_directory_ldap advanced_regex microsoft_atp_safe_links base64 string basename subnet microsoft_teams csv python_3_script type_converter rapid7_insight_agent datetime rapid7_insightidr whois dig rapid7_insightvm rapid7_intsights extractit rapid7_vulndb rapid7_insightappsec hashit rest rapid7_insights html servicenow jira sleep
+
+        run: |
+          set +e
+          cd plugins
+          for plugin in $TIER_ONE_PLUGINS_ICON
+          do
+            cd $plugin
+            echo $plugin
+            python3 -m venv venv
+            source venv/bin/activate
+            pip3 install setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
+            pip3 install coverage insightconnect_plugin_runtime -r requirements.txt --no-cache-dir --disable-pip-version-check
+            export PYTHONPATH=$(pwd)/unit_test/
+            coverage run -m unittest unit_test/*
+            percentage="0%"
+            output=$(python3 -m coverage report --data-file=$data_file)
+            if [ "$output" != "No data to report." ]
+            then
+              percentage=$(echo $output | grep TOTAL | awk '{print $NF}')
+            fi
+            echo "$plugin, $percentage" >> ../../coverageDir/coverage.csv
+            deactivate
+            rm -r venv
+            cd ../
+          done
+
+      - name: Upload Coverage
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: coverageDir
