--- a/plugins/haveibeenpwned/Dockerfile
+++ b/plugins/haveibeenpwned/Dockerfile
@@ -1,22 +1,20 @@
-FROM komand/python-3-37-slim-plugin:3
-# Refer to the following documentation for available SDK parent images: https://docs.rapid7.com/insightconnect/sdk-guide/#sdk-guide
-LABEL organization=komand
+FROM rapid7/insightconnect-python-3-38-plugin:4
+
+LABEL organization=rapid7
 LABEL sdk=python
-LABEL type=plugin
-
-ENV SSL_CERT_FILE /etc/ssl/certs/ca-certificates.crt
-ENV SSL_CERT_DIR /etc/ssl/certs
-ENV REQUESTS_CA_BUNDLE  /etc/ssl/certs/ca-certificates.crt
-
-ADD ./plugin.spec.yaml /plugin.spec.yaml
-ADD . /python/src
 
 WORKDIR /python/src
-# Add any package dependencies here
 
-# End package dependencies
+ADD ./plugin.spec.yaml /plugin.spec.yaml
+ADD ./requirements.txt /python/src/requirements.txt
+
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-RUN python setup.py build && python setup.py install
 
-USER root
+ADD . /python/src
+
+RUN	python setup.py build && python setup.py install
+
+# User to run plugin code. The two supported users are: root, nobody
+USER nobody
+
 ENTRYPOINT ["/usr/local/bin/icon_haveibeenpwned"]
