--- a/plugins/haveibeenpwned/plugin.spec.yaml
+++ b/plugins/haveibeenpwned/plugin.spec.yaml
@@ -7,7 +7,7 @@ vendor: rapid7
 support: rapid7
 status: []
 description: Determine if a user, domain, or password has been leaked via data available in the Have I Been Pwned database
-version: 4.0.2
+version: 5.0.0
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/haveibeenpwned
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -24,7 +24,7 @@ hub_tags:
 enable_cache: true
 
 connection:
-  credentials:
+  api_key:
     title: API Key
     description: API key
     type: credential_secret_key
